--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,55 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
     <script src="js/excel.min.js"></script>
     <title>Document</title>
 </head>
 
 <body class='container'>
 
+<div id = "navbar"><span>Mapping Program </span></div><br>
+<div id = "wrapper1" style = "width:30%; float:left;">
 
+    <input type = "file" id="input-excel1">
 
-<div style = "width:30%; float:left;" id='grid'>
-    <input type='file' id='file'/>
-</div>
-<div style = "width:30%; float:right;" id='grid2'>
-    <input type='file' id='file2'/>
-</div>
+    <div id="grid1"></div>
 
-<div class="row">
-    <table id="example-table-1" width="100%" class="table table-bordered table-hover text-center">
-        <thead>
-        <tr>
-            <th>No. </th>
-            <th>아이디</th>
-            <th>이름</th>
-            <th>이메일</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>1</td>
-            <td>user01</td>
-            <td>홍길동</td>
-            <td>hong@gmail.com</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>user02</td>
-            <td>김사부</td>
-            <td>kim@naver.com</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>user03</td>
-            <td>존</td>
-            <td>John@gmail.com</td>
-        </tr>
-        </tbody>
-    </table>
+    <br>
     <div class="col-lg-12" id="ex1_Result1" ></div>
+</div>
+
+<div id = "wrapper2" style = "width:30%; float:right;">
+    <input type = "file" id="input-excel2">
+    <br>
+    <div id="grid2"></div>
+    <br>
     <div class="col-lg-12" id="ex1_Result2" ></div>
 </div>
+
+
 
 
 </body>
@@ -63,7 +41,7 @@
 <script>
 
 var test1 = null, test2 = null;
-function gridExcelToWeb(file, target){
+function gridExcelToWeb(file, target, table_id){
     var reader = new FileReader();
 
     reader.onload = function (evt) {
@@ -82,51 +60,90 @@ function gridExcelToWeb(file, target){
             var toHtml = XLSX.utils.sheet_to_html(workbook.Sheets[sheetName], { header: '' });
 
             target.html(toHtml);
-            target.find('table').attr({class:'table table-bordered',id:'excelResult'});  //id나 class같은거를 줄 수 있다.
+            target.find('table').attr({id:table_id, class:'table table-bordered'});  //id나 class같은거를 줄 수 있다.
             test2 = toHtml;
-        }
-    };
+            if(table_id == "excelResult1"){
+                // 테이블의 Row 클릭시 값 가져오기
+                $("#excelResult1 tr").click(function(){
+
+                    var str = ""
+                    var tdArr = new Array();	// 배열 선언
+
+                    // 현재 클릭된 Row(<tr>)
+                    var tr = $(this);
+                    var td = tr.children();
+
+                    // tr.text()는 클릭된 Row 즉 tr에 있는 모든 값을 가져온다.
+                    console.log("클릭한 Row의 모든 데이터 : "+tr.text());
+
+                    // 반복문을 이용해서 배열에 값을 담아 사용할 수 도 있다.
+                    td.each(function(i){
+                    tdArr.push(td.eq(i).text());
+                    });
+
+                    console.log("배열에 담긴 값 : "+tdArr);
+
+                    // td.eq(index)를 통해 값을 가져올 수도 있다.
+                    var no = td.eq(0).text();
+                    var english_field = td.eq(1).text();
+                    var korean_field = td.eq(2).text();
+                    var length = td.eq(3).text();
+
+
+                    $("#ex1_Result1").html(" * 클릭한 Row의 모든 데이터 = " + tr.text());
+
+                    });
+                 }
+             else if(table_id == 'excelResult2'){
+                    // 테이블의 Row 클릭시 값 가져오기
+                $("#excelResult2 tr").click(function(){
+
+                    var str = ""
+                    var tdArr = new Array();	// 배열 선언
+
+                    // 현재 클릭된 Row(<tr>)
+                    var tr = $(this);
+                    var td = tr.children();
+
+                    // tr.text()는 클릭된 Row 즉 tr에 있는 모든 값을 가져온다.
+                    console.log("클릭한 Row의 모든 데이터 : "+tr.text());
+
+                    // 반복문을 이용해서 배열에 값을 담아 사용할 수 도 있다.
+                    td.each(function(i){
+                    tdArr.push(td.eq(i).text());
+                    });
+
+                    console.log("배열에 담긴 값 : "+tdArr);
+
+                    // td.eq(index)를 통해 값을 가져올 수도 있다.
+                    var no = td.eq(0).text();
+                    var english_field = td.eq(1).text();
+                    var korean_field = td.eq(2).text();
+                    var length = td.eq(3).text();
+
+
+                    $("#ex1_Result2").html(" * 클릭한 Row의 모든 데이터 = " + tr.text());
+
+                    });
+             }
+
+            }
+        };
+
+
     reader.readAsArrayBuffer(file);
 }
 
-$('#file').change( function(){
+$('#input-excel1').change( function(){
     const selectedFile = $(this)[0].files[0];
-    gridExcelToWeb(selectedFile,  $('#grid'))
+    var table_id = 'excelResult1';
+    gridExcelToWeb(selectedFile,  $('#grid1'), table_id)
 });
 
-$('#file2').change( function(){
+$('#input-excel2').change( function(){
     const selectedFile = $(this)[0].files[0];
-    gridExcelToWeb(selectedFile,  $('#grid2'))
+    var table_id = 'excelResult2';
+    gridExcelToWeb(selectedFile,  $('#grid2') ,table_id)
 });
 
-// 테이블의 Row 클릭시 값 가져오기
-$("excelResult tr").click(function(){
-
-    var str = ""
-    var tdArr = new Array();	// 배열 선언
-
-    // 현재 클릭된 Row(<tr>)
-    var tr = $(this);
-    var td = tr.children();
-
-    // tr.text()는 클릭된 Row 즉 tr에 있는 모든 값을 가져온다.
-    console.log("클릭한 Row의 모든 데이터 : "+tr.text());
-
-    // 반복문을 이용해서 배열에 값을 담아 사용할 수 도 있다.
-    td.each(function(i){
-        tdArr.push(td.eq(i).text());
-    });
-
-    console.log("배열에 담긴 값 : "+tdArr);
-
-    // td.eq(index)를 통해 값을 가져올 수도 있다.
-    var no = td.eq(0).text();
-    var userid = td.eq(1).text();
-    var name = td.eq(2).text();
-    var email = td.eq(3).text();
-
-
-    $("#ex1_Result1").html(" * 클릭한 Row의 모든 데이터 = " + tr.text());
-
-});
 </script>
